[gd_scene load_steps=11 format=3 uid="uid://nkv6583poru4"]

[ext_resource type="Script" path="res://main.gd" id="1_6po7t"]
[ext_resource type="PackedScene" uid="uid://yhhdmpnnwnxr" path="res://environment.tscn" id="1_qw3on"]
[ext_resource type="Texture2D" uid="uid://c3hsmir1glq0d" path="res://addons/kenney_particle_pack/circle_05.png" id="3_hr244"]
[ext_resource type="PackedScene" uid="uid://c30d472gdop0j" path="res://ui/hit_marker/hit_marker.tscn" id="4_fi2uq"]
[ext_resource type="PackedScene" uid="uid://v51yww03ph3p" path="res://ui/message_box/message_box.tscn" id="4_tbemt"]

[sub_resource type="ProceduralSkyMaterial" id="ProceduralSkyMaterial_80s7a"]
sky_horizon_color = Color(0.64625, 0.65575, 0.67075, 1)
ground_horizon_color = Color(0.64625, 0.65575, 0.67075, 1)

[sub_resource type="Sky" id="Sky_c2loi"]
sky_material = SubResource("ProceduralSkyMaterial_80s7a")

[sub_resource type="Environment" id="Environment_lwd0a"]
background_mode = 2
sky = SubResource("Sky_c2loi")
tonemap_mode = 2
glow_enabled = true

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_rv5yt"]
bg_color = Color(0.726918, 0.251531, 0.21344, 1)
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_h6pwt"]
bg_color = Color(0.159261, 0.48502, 0, 1)
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[node name="Main" type="Node"]
script = ExtResource("1_6po7t")

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="."]
transform = Transform3D(-0.866023, -0.433016, 0.250001, 0, 0.499998, 0.866027, -0.500003, 0.749999, -0.43301, 0, 0, 0)
shadow_enabled = true

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource("Environment_lwd0a")

[node name="Environment" parent="." instance=ExtResource("1_qw3on")]

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="MainMenu" type="PanelContainer" parent="CanvasLayer"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -169.0
offset_top = -95.0
offset_right = 169.0
offset_bottom = 96.0
grow_horizontal = 2
grow_vertical = 2

[node name="MarginContainer" type="MarginContainer" parent="CanvasLayer/MainMenu"]
layout_mode = 2
theme_override_constants/margin_left = 15
theme_override_constants/margin_top = 15
theme_override_constants/margin_right = 15
theme_override_constants/margin_bottom = 15

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer/MainMenu/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 15

[node name="Label" type="Label" parent="CanvasLayer/MainMenu/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Main Menu"
horizontal_alignment = 1
vertical_alignment = 1

[node name="HSeparator2" type="HSeparator" parent="CanvasLayer/MainMenu/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="DisplayNameEntry" type="LineEdit" parent="CanvasLayer/MainMenu/MarginContainer/VBoxContainer"]
layout_mode = 2
placeholder_text = "Enter display name"
alignment = 1

[node name="HSeparator3" type="HSeparator" parent="CanvasLayer/MainMenu/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="HostButton" type="Button" parent="CanvasLayer/MainMenu/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Host"

[node name="HSeparator" type="HSeparator" parent="CanvasLayer/MainMenu/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="AddressEntry" type="LineEdit" parent="CanvasLayer/MainMenu/MarginContainer/VBoxContainer"]
layout_mode = 2
placeholder_text = "Enter IP address to join"
alignment = 1

[node name="JoinButton" type="Button" parent="CanvasLayer/MainMenu/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Join"

[node name="HUD" type="Control" parent="CanvasLayer"]
visible = false
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="HealthBar" type="ProgressBar" parent="CanvasLayer/HUD"]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 33.0
offset_top = -68.0
offset_right = 571.0
offset_bottom = -33.0
grow_vertical = 0
theme_override_styles/background = SubResource("StyleBoxFlat_rv5yt")
theme_override_styles/fill = SubResource("StyleBoxFlat_h6pwt")
max_value = 3.0
value = 3.0
show_percentage = false

[node name="Reticle" type="TextureRect" parent="CanvasLayer/HUD"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -8.0
offset_top = -8.0
offset_right = 504.0
offset_bottom = 504.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(0.03, 0.03)
texture = ExtResource("3_hr244")
stretch_mode = 5

[node name="HitMarker" parent="CanvasLayer/HUD" instance=ExtResource("4_fi2uq")]
layout_mode = 1

[node name="MessageBox" parent="CanvasLayer/HUD" instance=ExtResource("4_tbemt")]
layout_mode = 1

[node name="MultiplayerSpawner" type="MultiplayerSpawner" parent="."]
_spawnable_scenes = PackedStringArray("res://player.tscn")
spawn_path = NodePath("..")

[connection signal="pressed" from="CanvasLayer/MainMenu/MarginContainer/VBoxContainer/HostButton" to="." method="_on_host_button_pressed"]
[connection signal="pressed" from="CanvasLayer/MainMenu/MarginContainer/VBoxContainer/JoinButton" to="." method="_on_join_button_pressed"]
[connection signal="spawned" from="MultiplayerSpawner" to="." method="_on_multiplayer_spawner_spawned"]
